Fix positioning of right aligned more/share tools
[Finishes: #116334871]

--- a/src/components/posts/PostTools.sass
+++ b/src/components/posts/PostTools.sass
@@ -100,7 +100,7 @@
 .ShareTool
   position: absolute
   top: rem(19)
-  right: rem(-10)
+  right: rem(10)
 
 .ShareTool .Hint
   left: calc(-100% - 2px)
@@ -158,6 +158,7 @@
 .PostTools.isMoreToolActive
   transform: translate3d(rem(-120), 0, 0)
 
+.PostTools.isMoreToolActive .ShareTool,
 .PostTools.isMoreToolActive .MoreTool
   transform: translate3d(rem(120), 0, 0)
 
@@ -184,14 +185,18 @@
 @media(min-width: #{em(375)})
   .PostTools.isMoreToolActive
     transform: translate3d(rem(-70), 0, 0)
+  .PostTools.isMoreToolActive .ShareTool,
   .PostTools.isMoreToolActive .MoreTool
     transform: translate3d(rem(70), 0, 0)
 
 @media(min-width: #{em(450)})
+  .ShareTool
+    right: rem(-10)
   .Posts .MoreTool,
   .Posts.asGrid .ShyTool
     display: none
   .PostTools.isMoreToolActive,
+  .PostTools.isMoreToolActive .ShareTool,
   .PostTools.isMoreToolActive .MoreTool
     transform: none
   .Posts.asList .ShyTool
